crates/pgls_cli/tests/snapshots/assert_check__check_indented_cte_after_blank_line_does_not_panic.snap
---
source: crates/pgls_cli/tests/assert_check.rs
assertion_line: 139
expression: output
---
status: success
stdout:
WITH

 x AS (SELECT 1 AS a)
SELECT x.a FROM x;
stderr:
